--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,7 +53,18 @@ h1, h2, h3 {
   }
 }
 
-// Homepage s
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
+}
+
+.navbar-default .navbar-toggle {
+  border: 2px solid white;
+  &:hover, &:focus {
+    background-color: #00c6ff;
+  }
+}
+
+// Homepage styles
 .home-callout {
   color: white;
   margin-top: -20px;
