--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid text-center">
     <h1>about page</h1>
     <p>We are DevMatch. Our company focuses on creating an exclusive commnuity 
-    for developers and entrepreneurs to meet. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, tenetur, iusto dolor assumenda ducimus iure voluptates dolore modi ullam maxime neque natus dignissimos quaerat cum ipsum perferendis eos suscipit et.
+    for developers and entrepreneurs to meet. 
     </p>
 </div>
