--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -3,6 +3,17 @@
   height: 128px;
 }
 
+.job-title-icon {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border: 2px solid #2e6da4;
+  border-radius: 4px;
+  background-color: #337ab7;
+  color: white;
+  text-align: center;
+}
+
 .well.profile-block {
   color: #fff;
   h3 {
