--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,22 +5,43 @@
 
 <div class= "container home-sign-up-links">
   <div class= "row">
-    <div class= "col-md-6">
-      <div class= "well">
-        <h2 class= "text-center">Basic Membership</h2>
-        <h4>Sign up for free and get basic access to the community.</h4>
-        <br>
-        <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block'%> 
+    <% if user_signed_in? %>
+      <div class="col-md-6">
+        <div class="well">
+          <h2 class="text-center">Your Profile</h2>
+          <% if false #current_user.profile %>
+            <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block' %>
+            <%= link_to "View your profile", user_path(id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
+          <% else %>
+            <p>Create your profile so that you can share your information with the commnuity.</p>
+            <%= link_to "Create your profile", new_user_profile_path(user_id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
+          <% end %>
+        </div>
       </div>
-    </div>
-    <div class= "col-md-6">
-      <div class= "well">
-        <h2 class= "text-center">Pro Membership</h2>
-        <h4>Sign up with Pro for $10/month and get to the commnuity and contact information!</h4>
-        <br>
-        <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block'%>
+      <div class="col-md-6">
+        <div class="well">
+          <h2 class="text-center">Community</h2>
+          <p>visit the community to meet other developers, entrepreneurs and investors!</p>
+          <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
+        </div>
       </div>
-    </div>
+    <% else %>
+      <div class= "col-md-6">
+        <div class= "well">
+          <h2 class= "text-center">Basic Membership</h2>
+          <h4>Sign up for free and get basic access to the community.</h4>
+          <br>
+          <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block'%> 
+        </div>
+      </div>
+      <div class= "col-md-6">
+        <div class= "well">
+          <h2 class= "text-center">Pro Membership</h2>
+          <h4>Sign up with Pro for $10/month and get to the commnuity and contact information!</h4>
+          <br>
+          <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block'%>
+        </div>
+      </div>
+    <% end %>
   </div>
-  <%= link_to "Create your profile!", new_user_profile_path(user_id: current_user.id) if user_signed_in? %>
 </div>
