--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid text-center">
-    <h1>about page</h1>
+    <h1>About Us</h1>
     <p>We are DevMatch. Our company focuses on creating an exclusive commnuity 
-    for developers and entrepreneurs to meet. 
+    for developers, investors and entrepreneurs to meet. 
     </p>
 </div>
